--- a/index.html
+++ b/index.html
@@ -127,7 +127,9 @@
     </div>
   </div>
 </div>
-
+<marquee class="scroll" behavior="scroll" direction="left">
+ আমার ওয়েবসাইটে আসার জন্য আপনাকে অসংখ্য ধন্যবাদ। এটি একটি ডেমো ওয়েবসাইট। ধন্যবাদ
+</marquee>
 
 
 
